--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.5.0
 certifi==2021.10.8
 charset-normalizer==2.0.11
+dj-database-url==0.5.0
 Django==4.0.2
+django-heroku==0.3.1
+gunicorn==20.1.0
 idna==3.3
+psycopg2==2.9.3
 pyTelegramBotAPI==4.4.0
 requests==2.27.1
 sqlparse==0.4.2
 urllib3==1.26.8
+whitenoise==6.0.0
